Added better config example

--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
 1) Copy app/config/example-default.ini to app/config/default.ini
-2) Customise it as needed - you'll need at least two databases, one for the triplestore, one for the application
+2) Customise it as needed - you'll need at least one mysql database, for the triplestore
 3) Make sure you have ARC2 in your include path. You can put lib/arc/ into it, or install a newer version elsewhere.
 4) Set up a virtual host
 
